force-app/main/default/objects/AF_CreditNote__c/fields/AF_Amount__c.field-meta.xml
<CustomField>
    <fullName>AF_Amount__c</fullName>
    <label>Credit Note Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>