force-app/main/default/objects/AF_CreditNote__c/fields/AF_DocumentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_DocumentReference__c</fullName>
    <label>Document Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>