force-app/main/default/objects/AF_CreditNote__c/fields/AF_EvidenceReference__c.field-meta.xml
<CustomField>
    <fullName>AF_EvidenceReference__c</fullName>
    <description>Required. Actual file lives via ContentDocumentLink.</description>
    <label>Evidence Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>