force-app/main/default/objects/AF_CreditNote__c/fields/AF_FinanceStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_FinanceStatus__c</fullName>
    <label>Finance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>