force-app/main/default/objects/AF_CreditNote__c/fields/AF_InvoiceSummary__c.field-meta.xml
<CustomField>
    <fullName>AF_InvoiceSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Summary</label>
    <referenceTo>AF_InvoiceSummary__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>AF_CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>