force-app/main/default/objects/AF_CreditNote__c/fields/AF_KeyloopCreditNoteReference__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopCreditNoteReference__c</fullName>
    <externalId>true</externalId>
    <label>Keyloop Credit Note Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>