force-app/main/default/objects/AF_CreditNote__c/fields/AF_Reason__c.field-meta.xml
<CustomField>
    <fullName>AF_Reason__c</fullName>
    <description>Placeholder value list — final policy-driven list pending client (dictionary marks this Pending client input).</description>
    <label>Cancellation / Refund Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Overpayment</fullName>
            </value>
            <value>
                <fullName>Duplicate Payment</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>