force-app/main/default/objects/AF_CreditNote__c/fields/AF_RefundAmount__c.field-meta.xml
<CustomField>
    <fullName>AF_RefundAmount__c</fullName>
    <label>Refund Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>