force-app/main/default/objects/AF_CreditNote__c/fields/AF_RefundPath__c.field-meta.xml
<CustomField>
    <fullName>AF_RefundPath__c</fullName>
    <label>Refund or Credit Retention Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Credit Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>