force-app/main/default/objects/AF_CreditNote__c/fields/AF_Synced__c.field-meta.xml
<CustomField>
    <fullName>AF_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced?</label>
    <type>Checkbox</type>
</CustomField>