force-app/main/default/objects/AF_CreditNote__c/validationRules/AF_VR_CreditNote_EvidenceRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_CreditNote_EvidenceRequired</fullName>
    <active>true</active>
    <description>Supporting evidence is required before a cancellation/refund request can be submitted for approval.</description>
    <errorConditionFormula>ISPICKVAL(AF_ApprovalStatus__c, &quot;Pending&quot;) &amp;&amp; ISBLANK(AF_EvidenceReference__c)</errorConditionFormula>
    <errorMessage>Supporting evidence is required before this cancellation/refund request can be submitted for approval.</errorMessage>
</ValidationRule>